<resources>
    <string name="app_name">Comisaría Virtual</string>
    <string name="big_icon">Un ícono con una persona.</string>
    <string name="data_tab">Datos</string>
    <string name="address_tab">Domicilio</string>
    <string name="input_names">Primer y segundo nombre</string>
    <string name="input_last_names">Apellido paterno y materno</string>
    <string name="input_rut">RUT</string>
    <string name="input_rut_id">Número de serie</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="personas">Personas</string>
    <string name="direcciones">Direcciones</string>
    <string name="buscar">Buscar...</string>
    <string name="buscar_desc">Buscar un ítem de la lista.</string>
    <string name="editar">Editar</string>
    <string name="editar_desc">Editar el ítem seleccionado.</string>
    <string name="icon_frame">Borde círcular que contiene un ícono.</string>
    <string name="map_marker_icon_desc">Ícono de un marcador de ruta.</string>
    <string name="map_icon_desc">Ícono de un mapa.</string>
    <string name="rut_placeholder">xx.xxx.xxx-x</string>
    <string name="long_placeholder">XXXXXXXXXXXXXX</string>
    <string name="short_placeholder">XXXXXXX</string>
    <string name="direction_tab">Dirección</string>
    <string name="input_nombre">Nombre del lugar</string>
    <string name="radio_health">Establecimiento de salud</string>
    <string name="radio_buy">Compra de insumos</string>
    <string name="radio_diligences">Diligencias</string>
    <string name="radio_other">Otro</string>
    <string name="info_title">¿No sabes dónde está tu número de serie?</string>
    <string name="info_new">Si tienes un carnet nuevo...</string>
    <string name="info_front">...búscalo por delante.</string>
    <string name="info_old">Si tienes un carnet antiguo...</string>
    <string name="info_back">...búscalo por atrás.</string>
    <string name="info_button">¡Lo encontré!</string>
    <string name="add_button_desc">Un botón para crear ítems.</string>
    <string name="id_front_desc">Carnet de Identidad nuevo por el frente.</string>
    <string name="id_back_desc">Carnet de Identidad antiguo por detrás.</string>
    <string name="end_1">¡Permiso generado!</string>
    <string name="end_2">Este se ha enviado a su correo.</string>
    <string name="end_3">Toque en cualquier lado para volver.</string>
    <string name="appbar_select_data">Seleccione sus datos</string>
    <string name="button_continue">Continuar</string>
    <string name="title_not_found">TITLE ERROR!</string>
    <string name="permisos">Permisos</string>
    <string name="hint_select_region">Seleccione su región.</string>
    <string name="hint_select_commune">Seleccione su comuna.</string>
    <string name="hint_input_address">Escriba acá la dirección.</string>
    <string name="input_mail">Correo electrónico</string>
    <string name="list_icon_desc">Ícono que muestra el sexo del individuo.</string>
    <string name="actionbar_delete">Eliminar</string>
</resources>