<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="100dp">

            <TextView
                style="@style/InfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title" />

            <TextView
                style="@style/InfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_new" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/id_front_desc"
                android:src="@drawable/img_id_front" />

            <TextView
                style="@style/InfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_front" />

            <TextView
                style="@style/InfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_old" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/id_back_desc"
                android:src="@drawable/img_id_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_back"
                style="@style/InfoText"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ExtendedFloatingButtonStyle"
        android:layout_marginTop="-80dp"
        android:text="@string/info_button"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>
</LinearLayout>