<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="40sp"
        android:orientation="vertical"
        android:scrollbars="horizontal"
        android:paddingBottom="100dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/input_nombre">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/placeRadios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radioHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_health" />
            <RadioButton
                android:id="@+id/radioBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_buy" />
            <RadioButton
                android:id="@+id/radioDiligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_diligences" />
            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_other" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>