<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:menu="@menu/menu_edit"
            app:navigationIcon="@drawable/ic_back_arrow" />

        <ImageView
            android:id="@+id/bigIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-55dp"
            android:contentDescription="@string/icon_frame"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon_frame"
            app:tint="@color/colorDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre"
                style="@style/NameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />

            <TextView
                android:id="@+id/segundoNombre"
                style="@style/NameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apellidoPaterno"
                style="@style/NameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />

            <TextView
                android:id="@+id/apellidoMaterno"
                style="@style/NameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />
        </LinearLayout>

        <TextView
            style="@style/RutTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rut_placeholder" />


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="100dp">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:contentDescription="@string/map_marker_icon_desc"/>

            <TextView
                android:id="@+id/region"
                style="@style/SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_placeholder" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />

            <ImageView
                android:id="@+id/addressIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_map"
                android:contentDescription="@string/map_icon_desc"/>

            <TextView
                android:id="@+id/address"
                style="@style/SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_placeholder" />

            <TextView
                android:id="@+id/addressInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_placeholder" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_delete"
        style="@style/FloatingButtonStyle"/>
</LinearLayout>