<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataPicker">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="@string/appbar_select_data" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/form_dashed_square" />

        <ImageView
            android:id="@+id/firstSelectionIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_icon_frame"
            android:layout_marginTop="-200sp"
            android:layout_gravity="center"
            app:tint="@color/colorGray"/>
        <TextView
            android:id="@+id/firstSelectionText"
            android:layout_width="wrap_content"
            android:layout_height="90sp"
            android:text="@string/short_placeholder"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            style="@style/SmallTitle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/form_dashed_square" />

        <ImageView
            android:id="@+id/secondSelectionIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_icon_frame"
            android:layout_marginTop="-200sp"
            android:layout_gravity="center"
            app:tint="@color/colorGray"/>
        <TextView
            android:id="@+id/secondSelectionText"
            android:layout_width="wrap_content"
            android:layout_height="90sp"
            android:text="@string/short_placeholder"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            style="@style/SmallTitle"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ExtendedFloatingButtonStyle"
        android:layout_marginTop="25sp"
        android:text="@string/button_continue"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>

</LinearLayout>